crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s00_be000.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 2166516
opcode counts (227363 total instructions):
    61455 add
    25998 sw
    25361 lw
    18616 lbu
    10696 beq
    10633 bne
    10327 sb
     8857 xor
     7032 srl
     6212 sll
     5912 bltu
     5658 sltu
     5623 and
     5521 or
     4993 jalr
     2555 mul
     2501 auipc
     2407 sub
     2403 ecall
     2384 mulhu
     1480 jal
      391 bgeu
      162 sra
       82 sh
       76 lb
       14 lhu
       13 blt
        1 lh
syscall counts (2403 total syscall instructions):
    1536 secp256k1_double
     742 secp256k1_add
      79 keccak_permute
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
