crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s01_be001.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 3162323
opcode counts (706808 total instructions):
    189524 add
    108800 sw
     85389 lw
     77781 lbu
     46145 sb
     41059 bne
     34383 xor
     28315 bltu
     17027 beq
     14928 and
     10457 jalr
      8024 sltu
      7768 srl
      7262 or
      6398 sll
      5549 sub
      5233 auipc
      2945 mul
      2791 ecall
      2384 mulhu
      2296 jal
      1559 bgeu
       470 sh
       162 sra
       105 lb
        36 lhu
        13 blt
         4 slt
         1 lh
syscall counts (2791 total syscall instructions):
    1536 secp256k1_double
     744 secp256k1_add
     465 keccak_permute
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
