crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s01_be002.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 3162323
opcode counts (712718 total instructions):
    191068 add
    109460 sw
     86099 lw
     78523 lbu
     46444 sb
     41412 bne
     34499 xor
     28400 bltu
     17386 beq
     15012 and
     10709 jalr
      8066 sltu
      7800 srl
      7373 or
      6492 sll
      5702 sub
      5359 auipc
      2947 mul
      2845 ecall
      2384 mulhu
      2331 jal
      1567 bgeu
       471 sh
       162 sra
       134 lb
        53 lhu
        13 blt
         6 slt
         1 lh
syscall counts (2845 total syscall instructions):
    1536 secp256k1_double
     797 secp256k1_add
     466 keccak_permute
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
