crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s01_be020.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 3244037
opcode counts (800470 total instructions):
    211560 add
    122474 sw
     96803 lw
     90825 lbu
     53401 sb
     47246 bne
     37973 xor
     31294 bltu
     18532 beq
     17010 and
     11621 jalr
      9458 or
      8957 sltu
      8376 srl
      8187 sll
      6663 sub
      5815 auipc
      3010 mul
      2854 ecall
      2507 jal
      2387 mulhu
      1774 bgeu
       656 lb
       510 sh
       359 lhu
       162 sra
        42 slt
        13 blt
         1 lh
syscall counts (2854 total syscall instructions):
    1536 secp256k1_double
     767 secp256k1_add
     505 keccak_permute
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
