crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s01_be050.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 4233388
opcode counts (1191939 total instructions):
    309811 add
    177785 sw
    149131 lw
    130400 lbu
     85823 sb
     58666 bne
     46264 beq
     43288 xor
     38423 bltu
     26267 jalr
     21924 and
     18211 or
     16368 sll
     13163 auipc
     11439 srl
     11016 sltu
      8565 sub
      8059 lb
      3372 jal
      3087 mul
      2901 ecall
      2399 bgeu
      2384 mulhu
      1883 sh
       760 lh
       272 lhu
       162 sra
       102 slt
        13 blt
         1 bge
syscall counts (2901 total syscall instructions):
    1536 secp256k1_double
     757 secp256k1_add
     562 keccak_permute
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
