crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s01_be100.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 4944952
opcode counts (2160197 total instructions):
    558825 add
    330162 sw
    273229 lw
    242489 lbu
    161349 sb
    107006 bne
     81553 beq
     77981 xor
     71266 bltu
     47395 jalr
     38296 and
     31383 or
     26998 sll
     23752 auipc
     16400 sltu
     16339 srl
     15998 lb
     14737 sub
      5102 jal
      4419 bgeu
      3677 sh
      3627 mul
      3392 ecall
      2384 mulhu
      1519 lh
       531 lhu
       212 slt
       162 sra
        13 blt
         1 bge
syscall counts (3392 total syscall instructions):
    1536 secp256k1_double
    1049 keccak_permute
     761 secp256k1_add
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
