crates/pessimistic-proof-test-suite/tests/snapshots/cycle_tracker__s01_be223.snap
---
source: crates/pessimistic-proof-test-suite/tests/cycle-tracker.rs
expression: stats
snapshot_kind: text
---
gas: 5492916
opcode counts (2864805 total instructions):
    734462 add
    422860 sw
    350028 lw
    337839 lbu
    213155 sb
    148317 bne
    103947 beq
    100622 xor
     92776 bltu
     62232 jalr
     52427 and
     49841 or
     43480 sll
     31232 auipc
     23620 lb
     22935 sltu
     22222 sub
     17692 srl
      6821 jal
      6631 sh
      6517 bgeu
      3998 mul
      3621 ecall
      3364 lh
      2384 mulhu
      1146 lhu
       460 slt
       162 sra
        13 blt
         1 bge
syscall counts (3621 total syscall instructions):
    1536 secp256k1_double
    1297 keccak_permute
     742 secp256k1_add
      11 hint_len
      11 hint_read
       8 commit
       8 commit_deferred_proofs
       6 enter_unconstrained
       1 halt
       1 write
